# asteroids_python

./: main.py  pyproject.toml
common/: asteroid_type.py  defs.py  particle.py
entities/: asteroid.py  laser.py  obj.py  spaceship.py
