[tool.poetry]
name = "asteroids-python"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pygame = "^2.6.0"
python-lsp-server = {extras = ["all"], version = "^1.12.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
